--- a/async/message-listener-adapter/pom.xml
+++ b/async/message-listener-adapter/pom.xml
@@ -4,7 +4,7 @@
 
   <parent>
     <groupId>org.bsnyder.spring.jms</groupId>
-    <artifactId>spring-jms-activemq</artifactId>
+    <artifactId>spring-jms-examples</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
 
