--- a/async/message-listener-adapter/pom.xml
+++ b/async/message-listener-adapter/pom.xml
@@ -6,6 +6,7 @@
     <groupId>org.bsnyder.spring.jms</groupId>
     <artifactId>spring-jms-examples</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <relativePath>../../pom.xml</relativePath>
   </parent>
 
   <groupId>org.bsnyder.spring.jms</groupId>
